--- a/design/src/templates/pages/index.hbs
+++ b/design/src/templates/pages/index.hbs
@@ -25,8 +25,10 @@
       <p>UX/UI Designer & Frontend Developer</p>
       <ul>
         <li><small><a href="https://www.linkedin.com/in/bellentani/"><i class="fab fa-linkedin-in"></i> linkedin.com/in/bellentani/</a></small></li>
-        <li><small><a href="https://xd.adobe.com/view/d35d6a12-d577-43ee-7033-d3d89be95f2a-a56c/?fullscreen"><i class="fas fa-palette"></i> Temporary Portfolio</a></small></li>
+        <li><small><a href="https://xd.adobe.com/view/d35d6a12-d577-43ee-7033-d3d89be95f2a-a56c/?fullscreen"><i class="fas fa-palette"></i>Portfolio (made in Adobe XD)</a></small></li>
+        <li><small><a href="/portfolio.html"><i class="fas fa-code"></i>Portfolio (coded, HTML - Work in Progress)</a></small></li>
         <li><small><a href="https://github.com/bellentani"><i class="fab fa-github"></i> Github</a></small></li>
+        <li><small><a href="mailto:hello@poebellentani.me"><i class="fas fa-envelope"></i> hello@poebellentani.me</a></small></li>
       </ul>
     </main>
     {{> footer-scripts }}
