--- a/design/src/templates/pages/portfolio.hbs
+++ b/design/src/templates/pages/portfolio.hbs
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class="page-content page-content--ui">
-        <span class="page-content__header"></span>
+        <span class="page-content__header">
           <a href="#" data-toggle-mod="close" class="page-back"><i class="fas fa-arrow-left"></i></a>
           <h2 class="title">
             Portfolio <b>UI</b>
