--- a/design/src/sass/project/pages/_portfolio.scss
+++ b/design/src/sass/project/pages/_portfolio.scss
@@ -102,6 +102,10 @@
                     mask-repeat: no-repeat;
                     mask-size: 41.4vh;
                     mask-position: center;
+
+                    @supports (-ms-ime-align:auto) {
+                        display: none;
+                    }
                 }
             }
         }
