making updates on language and gulp packages

--- a/design/src/templates/pages/portfolio_pt-br.hbs
+++ b/design/src/templates/pages/portfolio_pt-br.hbs
@@ -3,10 +3,10 @@
   <head>
     {{> head-metatags
           canonical="https://poebellentani.me/"
-          title="Poe Bellentani, UX/UI Design & Developer"
+          title="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer"
           description="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O'Reilly books, Codeschool, Lynda.com and a lot of online sources)"
-          keywords="UX consultant, UI design, Design, UX consultoria, User Experience, Consultoria, Frontend Developer"
-          title-facebook="Poe Bellentani: UX/UI Designer & Frontend Developer"
+          keywords="UX consultant, Design System, Design Ops, UI design, Design, UX consultant, User Experience, Consultoria UX, Consultoria, Frontend Developer"
+          title-facebook="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer"
           image-itemprop="https://poebellentani.me/img/poebellentani.jpg"
           image-facebook="https://poebellentani.me/img/og-image.jpg"
           image-twitter="https://poebellentani.me/img/twitter-image.jpg"
@@ -45,7 +45,7 @@
         <div class="page-content__list">
           <ul class="list-unstyled">
             <li>
-              <a href="portfolio-ux-innovatech.html">
+              <a href="portfolio-ux-innovatech_pt-br.html">
                 <span>
                   <strong>UX #1:</strong> Innovatech
                 </span>
@@ -72,7 +72,7 @@
         <div class="page-content__list">
           <ul class="list-unstyled">
             <li>
-              <a href="portfolio-ui-ryd.html">
+              <a href="portfolio-ui-ryd_pt-br.html">
                 <span>
                   <strong>UI #1:</strong> RYD Agro
                 </span>
