--- a/design/src/templates/pages/index.hbs
+++ b/design/src/templates/pages/index.hbs
@@ -3,10 +3,10 @@
   <head>
     {{> head-metatags
           canonical="https://poebellentani.me/"
-          title="Poe Bellentani, UX/UI Design & Developer"
+          title="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer"
           description="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O'Reilly books, Codeschool, Lynda.com and a lot of online sources)"
-          keywords="UX consultant, UI design, Design, UX consultoria, User Experience, Consultoria, Frontend Developer"
-          title-facebook="Poe Bellentani: UX/UI Designer & Frontend Developer"
+          keywords="UX consultant, Design System, Design Ops, UI design, Design, UX consultant, User Experience, Consultoria UX, Consultoria, Frontend Developer"
+          title-facebook="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer"
           image-itemprop="https://poebellentani.me/img/poebellentani.jpg"
           image-facebook="https://poebellentani.me/img/og-image.jpg"
           image-twitter="https://poebellentani.me/img/twitter-image.jpg"
@@ -22,11 +22,12 @@
       <a id="home" href="javascript.void(0)" class="main-anchor" aria-label="Início do Site"></a>
 
       <h1>Poe Bellentani</h1>
-      <p>UX/UI Designer & Frontend Developer</p>
+      <p>Design System, Design Ops, UI Design, UX & Frontend Developer</p>
       <ul>
         <li><small><a href="https://www.linkedin.com/in/bellentani/" target="_blank"><i class="fab fa-linkedin-in"></i> linkedin.com/in/bellentani/</a></small></li>
-        <li><small><a href="https://xd.adobe.com/view/d35d6a12-d577-43ee-7033-d3d89be95f2a-a56c/?fullscreen" target="_blank"><i class="fas fa-palette"></i> Portfolio (made in Adobe XD)</a></small></li>
-        <li><small><a href="/portfolio.html" target="_blank"><i class="fas fa-code"></i> Portfolio (coded, HTML - Work in Progress)</a></small></li>
+        <li><small><a href="https://www.figma.com/@bellentani" target="_blank"><i class="fab fa-linkedin-in"></i> figma.com/@bellentani</a></small></li>
+        <li><small><a href="/portfolio_pt-br.html" target="_blank"><i class="fas fa-code"></i> Portfolio (coded, HTML) - Português</a></small></li>
+        {{!-- <li><small><a href="/portfolio_en.html" target="_blank"><i class="fas fa-code"></i> Portfolio (coded, HTML - English</a></small></li> --}}
         <li><small><a href="https://github.com/bellentani" target="_blank"><i class="fab fa-github"></i> Github</a></small></li>
         <li><small><a href="mailto:hello@poebellentani.me"><i class="fas fa-envelope"></i> hello@poebellentani.me</a></small></li>
       </ul>
