--- a/design/src/templates/pages/portfolio-ui-ryd.hbs
+++ b/design/src/templates/pages/portfolio-ui-ryd.hbs
@@ -3,10 +3,10 @@
   <head>
     {{> head-metatags
           canonical="https://poebellentani.me/"
-          title="Poe Bellentani, UX/UI Design & Developer"
+          title="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer"
           description="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O'Reilly books, Codeschool, Lynda.com and a lot of online sources)"
-          keywords="UX consultant, UI design, Design, UX consultoria, User Experience, Consultoria, Frontend Developer"
-          title-facebook="Poe Bellentani: UX/UI Designer & Frontend Developer"
+          keywords="UX consultant, Design System, Design Ops, UI design, Design, UX consultant, User Experience, Consultoria UX, Consultoria, Frontend Developer"
+          title-facebook="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer"
           image-itemprop="https://poebellentani.me/img/poebellentani.jpg"
           image-facebook="https://poebellentani.me/img/og-image.jpg"
           image-twitter="https://poebellentani.me/img/twitter-image.jpg"
@@ -35,7 +35,7 @@
                   </div>
                   <a href="#more-about" class="btn btn-outline-primary btn-lg">Ver mais <i class="fas fa-arrow-right"></i></a>
                   <div class="go-home box-caller">
-                    <a href="portfolio.html#ui" class="title"><!-- se vier a hash com #ux ou #ui define o layout do "back" -->
+                    <a href="portfolio_pt-br.html#ui" class="title"><!-- se vier a hash com #ux ou #ui define o layout do "back" -->
                       <i>Portfolio</i> <b>UI</b>
                       <span class="go-to-other">UX</span>
                     </a>
