--- a/design/src/templates/pages/index.hbs
+++ b/design/src/templates/pages/index.hbs
@@ -25,7 +25,7 @@
       <p>Design System, Design Ops, UI Design, UX & Frontend Developer</p>
       <ul>
         <li><small><a href="https://www.linkedin.com/in/bellentani/" target="_blank"><i class="fab fa-linkedin-in"></i> linkedin.com/in/bellentani/</a></small></li>
-        <li><small><a href="https://www.figma.com/@bellentani" target="_blank"><i class="fab fa-linkedin-in"></i> figma.com/@bellentani</a></small></li>
+        <li><small><a href="https://www.figma.com/@bellentani" target="_blank"><i class="fab fa-paint-brush"></i> figma.com/@bellentani</a></small></li>
         <li><small><a href="/portfolio_pt-br.html" target="_blank"><i class="fas fa-code"></i> Portfolio (coded, HTML) - Português</a></small></li>
         {{!-- <li><small><a href="/portfolio_en.html" target="_blank"><i class="fas fa-code"></i> Portfolio (coded, HTML - English</a></small></li> --}}
         <li><small><a href="https://github.com/bellentani" target="_blank"><i class="fab fa-github"></i> Github</a></small></li>
