--- a/design/src/templates/pages/portfolio_pt-br.hbs
+++ b/design/src/templates/pages/portfolio_pt-br.hbs
@@ -72,9 +72,16 @@
         <div class="page-content__list">
           <ul class="list-unstyled">
             <li>
+              <a href="portfolio-ui-apollion_pt-br.html">
+                <span>
+                  <strong>UI #1:</strong> Design System & Ops, Apollion DS - Captalys (2020 até 2022)
+                </span>
+              </a>
+            </li>
+            <li>
               <a href="portfolio-ui-ryd_pt-br.html">
                 <span>
-                  <strong>UI #1:</strong> RYD Agro
+                  <strong>UI #2:</strong> RYD Agro (2018)
                 </span>
               </a>
             </li>
