--- a/design/src/templates/partials/head-metatags.hbs
+++ b/design/src/templates/partials/head-metatags.hbs
@@ -14,7 +14,7 @@
   <meta name="author" content="{{author-name}}">
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@bonsaiux">
+  <meta name="twitter:site" content="@poebellentani">
   <meta name="twitter:title" content="{{title}}">
   <meta name="twitter:description" content="{{description}}">
   <meta name="twitter:image" content="{{image-twitter}}">
